Fix appearance of devtool scrollbar in darkmode
Fixed an issue where the devtool scrollbar didn't
change its appearance based on light/dark mode.

[Issue #17084]

--- a/packages/react-devtools-shared/src/devtools/views/DevTools.css
+++ b/packages/react-devtools-shared/src/devtools/views/DevTools.css
@@ -52,3 +52,17 @@
     display: none;
   }
 }
+
+::-webkit-scrollbar-thumb  {
+  background-color: var(--color-scroll-thumb);
+  border-radius: 2px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: var(--color-scroll-track);
+  border-left: 1px solid var(--color-border);
+}
+
+::-webkit-scrollbar {
+  width: 14px;
+}
